# doxa

./: .dockerignore  .drone.yml  .env  .gitattributes  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml  notes.txt
.github/workflows/: aisoc_client.yml  backend.yml  backend_lint.yml  backend_production.yml  frontend.yml  release_cli.yml
aisoc/client/: .env  .eslintrc.yml  package-lock.json  package.json
aisoc/client/public/: index.html
aisoc/client/src/: App.js  App.scss  competitions.js  index.css
aisoc/client/src/api/: auth.js  common.js  competition.js
aisoc/client/src/common/: _colours.scss  _common.scss  _fonts.scss
aisoc/client/src/components/: Button.js  Button.scss  Card.js  Card.scss  CompetitionHeader.scss  CompetitionTabs.js  CompetitionTabs.scss  Container.js  Container.scss  Footer.js  Footer.scss  Leaderboard.js  Leaderboard.scss  LoadingPlaceholder.js  LoadingPlaceholder.scss  Matches.js  Navbar.js  Navbar.scss  PairMatches.js  PairMatches.scss  TextBox.js  TextBox.scss  VerifyEmailCard.js
aisoc/deploy/: Dockerfile.server  Dockerfile.web  make_scorer_virtualenv.sh
aisoc/server/: Cargo.toml
aisoc/server/src/: cli.rs  main.rs
aisoc_ui/: .env  .eslintrc.yml  package-lock.json  package.json
aisoc_ui/public/: index.html
aisoc_ui/src/: App.js  App.scss  competitions.js  setupProxy.js
aisoc_ui/src/api/: auth.js  common.js  competition.js
aisoc_ui/src/common/: _colours.scss  gameReducer.js  liveSocketManager.js
aisoc_ui/src/component/: Games.js  Games.scss  Grid.scss  Leaderboard.js  Matches.js  Matches.scss  NavBar.js
aisoc_ui/src/components/: Button.js  Button.scss  Card.scss  CompetitionHeader.js  CompetitionHeader.scss  CompetitionTabs.js  CompetitionTabs.scss  Leaderboard.js  Leaderboard.scss  Matches.js  NavBar.js  NavBar.scss  PairMatches.js
aisoc_ui/src/hooks/: useAuthProvider.js
aisoc_ui/src/pages/: Account.js  Error404.js  Game.js  Home.js  Invite.js  Landing.js  Live.js  Login.js  Logout.js  Match.js  User.js  User.scss  Uttt.js
competitions/climatehack/: .gitignore  Cargo.toml  build_getting_started_zip.sh
competitions/climatehack/climatehack_getting_started/: .gitignore  dataset.py  loss.py  training.ipynb
competitions/climatehack/src/: competition.rs  dataset.rs  error.rs  game_client.rs  lib.rs  scorer.py  support.rs
competitions/utt/: Cargo.toml  INSTRUCTIONS.md
competitions/utt/example_agent/: main.py
competitions/utt/src/: competition.rs  game_client.rs  lib.rs  model.rs
competitions/uttt/: .gitignore  Cargo.toml  INSTRUCTIONS.md  build_getting_started_zip.sh
competitions/uttt/example_agent/: doxa_cli.py
competitions/uttt/src/: competition.rs  game_client.rs  model.rs
crates/doxa_adm/: Cargo.toml
crates/doxa_adm/src/: agent.rs  cli.rs  cli.yml  competition.rs  invite.rs  main.rs  user.rs
crates/doxa_auth/: Cargo.toml
crates/doxa_auth/src/: action.rs  controller.rs  delegated.rs  error.rs  extractor.rs  guard.rs  lib.rs  limiter.rs  limits.rs  model.rs  password.rs  route.rs  settings.rs  token.rs
crates/doxa_auth/src/route/: request.rs  response.rs
crates/doxa_cli/: Cargo.toml
crates/doxa_cli/src/: cli.rs  cli.yml  command.rs  config.rs  error.rs  main.rs  request.rs  token.rs  ui.rs
crates/doxa_cli/src/command/: agent.rs  auth.rs  raw.rs
crates/doxa_competition/: Cargo.toml
crates/doxa_competition/examples/: hello_world.rs
crates/doxa_competition/hello_world_agent/: main.py
crates/doxa_competition/src/: client.rs  context.rs  error.rs  hello_world.rs  lib.rs  manager.rs  route.rs  settings.rs
crates/doxa_competition/src/client/: executor.rs  route.rs
crates/doxa_competition/src/manager/: activation.rs  executor.rs  game_event.rs  upload.rs
crates/doxa_competition/src/route/: agent.rs  game.rs  leaderboard.rs  limits.rs  response.rs  upload.rs  user.rs
crates/doxa_core/: Cargo.toml
crates/doxa_core/src/: error.rs  lib.rs  redis.rs
crates/doxa_db/: Cargo.toml
crates/doxa_db/src/: action.rs  lib.rs  model.rs  schema.rs  view.rs
crates/doxa_execution_node/: Cargo.toml
crates/doxa_execution_node/src/: config.rs  lib.rs  manager.rs
crates/doxa_executor/: Cargo.toml
crates/doxa_executor/examples/: test.rs
crates/doxa_executor/src/: agent.rs  client.rs  context.rs  error.rs  event.rs  game.rs  lib.rs  manager.rs  settings.rs
crates/doxa_executor/src/context/: game_event.rs
crates/doxa_executor/test_agent/: doxa.yaml  main.py
crates/doxa_firecracker_sdk/: Cargo.toml
crates/doxa_firecracker_sdk/src/: error.rs  lib.rs  net.rs  request.rs  spawn.rs
crates/doxa_live/: Cargo.toml
crates/doxa_live/src/: agent.rs  client.rs  context.rs  lib.rs  session.rs
crates/doxa_mq/: Cargo.toml
crates/doxa_mq/src/: action.rs  lib.rs  model.rs
crates/doxa_server/: Cargo.toml
crates/doxa_server/src/: lib.rs  telemetry.rs
crates/doxa_storage/: Cargo.toml
crates/doxa_storage/src/: action.rs  controller.rs  endpoint.rs  error.rs  lib.rs  limits.rs  model.rs  retrieval.rs  route.rs  settings.rs  storage.rs
crates/doxa_storage/src/route/: request.rs  response.rs
crates/doxa_sys/: Cargo.toml
crates/doxa_sys/src/: error.rs  guard.rs  lib.rs
crates/doxa_user/: Cargo.toml
crates/doxa_user/src/: lib.rs  route.rs
crates/doxa_vm/: Cargo.toml
crates/doxa_vm/src/: backend.rs  error.rs  executor.rs  lib.rs  manager.rs  mount.rs  recorder.rs  stream.rs
crates/doxa_vm/src/backend/: docker.rs  firecracker.rs
crates/doxa_vm/src/executor/: agent.rs  spawn.rs
dev/: .dockerignore  .env  .gitattributes  .gitignore  alpine-install.sh  build_executor_bin.sh  create-multiple-postgresql-databases.sh  create_test_users.sh  dev_realm_config.toml  docker-compose.yml  init.sh  make_image.sh  rootfs.img  run_dev_setup.sh
dev/server/: Dockerfile
dev/vm/: build_rootfs.sh  dev_update_vm_executor_bin.sh
dev/web/: Dockerfile  nginx.conf
docs/: gen_depgraph.sh
migrations/2021-07-03-133421_initial/: down.sql  up.sql
migrations/2022-03-10-143827_execution_environment/: down.sql  up.sql
src/: main.rs  telemetry.rs
tests/servers/: Cargo.toml
(+230 files in other folders)
