[package]
name = "doxa"
version = "0.1.0"
edition = "2018"

[dependencies]
doxa_storage = { path = "crates/doxa_storage" }
doxa_auth = { path = "crates/doxa_auth" }
doxa_competition = { path = "crates/doxa_competition" }
doxa_db = { path = "crates/doxa_db" }
doxa_mq = { path = "crates/doxa_mq" }
doxa_executor = { path = "crates/doxa_executor" }
doxa_core = { path = "crates/doxa_core" }

utt = { path = "competitions/utt" }

actix-web = "4.0.0-beta.8"
dotenv = "0.15.0"
tracing-actix-web = "0.4.0-beta.10"
tracing = "0.1.19"
opentelemetry = { version = "0.14", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.13", features = ["tokio"] }
tracing-opentelemetry = { version = "0.13" }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.6"
bytes = "1.1.0"
humantime = "2.1.0"

[workspace]
members = ["crates/*", "competitions/*"]
