[package]
name = "aisoc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

doxa_server = { path = "../../crates/doxa_server" }
uttt = { path = "../../competitions/uttt" }

actix-web = "4.0.0-beta.8"
