[package]
name = "aisoc_server"
version = "0.1.0"
edition = "2021"

[dependencies]

doxa_server = { path = "../../crates/doxa_server" }
uttt = { path = "../../competitions/uttt" }
climatehack = { path = "../../competitions/climatehack" }

actix-web = "4.0.0-beta.14"
clap = { version = "3.0.10", features = ["derive", "env"] }
dotenv = "0.15.0"
