[package]
name = "doxa_auth"
version = "0.1.0"
edition = "2018"

[dependencies]
doxa_db = { path = "../doxa_db" }
doxa_sys = { path = "../doxa_sys" }
actix-web = "3"
derive_more = "0.99"
doxa_core = { path = "../doxa_core" }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
