[package]
name = "doxa_auth"
version = "0.1.0"
edition = "2018"

[dependencies]
doxa_db = { path = "../doxa_db" }
doxa_sys = { path = "../doxa_sys" }
actix-web = "4.0.0"
derive_more = "0.99"
doxa_core = { path = "../doxa_core" }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt-pbkdf = "0.6.1"
rand = "0.8.4"
serde_json = "1.0.78"
url = "2.2.2"
base64 = "0.13.0"
