[package]
name = "doxa_cli"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
derive_more = "0.99.16"
dirs = "4.0.0"
flate2 = "1.0.22"
reqwest = { version = "0.11.4", features = ["json", "multipart"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tar = "0.4.37"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "rt", "macros", "fs"] }
