[package]
name = "doxa_competition"
version = "0.1.0"
edition = "2018"

[dependencies]
doxa_executor = { path = "../doxa_executor" }
doxa_core = { path = "../doxa_core" }
doxa_mq = { path = "../doxa_mq" }
doxa_db = { path = "../doxa_db" }
doxa_auth = { path = "../doxa_auth" }
doxa_storage = { path = "../doxa_storage" }

async-trait = "0.1.51"
futures = "0.3.17"
serde = "1.0.130"
derive_more = "0.99.16"
serde_json = "1.0.67"
