[package]
name = "doxa_core"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.14"
serde = "1.0"
doxa_sys = { path = "../doxa_sys" }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
tokio = { version = "1.10.0", features = ["fs", "io-util", "process", "rt", "macros"] }
deadpool-lapin = { version = "0.8.0", features = ["rt_tokio_1"], default-features = false }
lapin = { version = "1.7.1", features = ["rustls"] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
chrono = { version = "0.4.19", features = ["serde"] }
deadpool-redis = "0.10.1"
redis = { version = "0.21.4", features = ["tokio-comp"] }

[features]
default = ["lapin/rustls"]
