[package]
name = "doxa_storage"
version = "0.1.0"
edition = "2018"

[dependencies]
doxa_db = { path = "../doxa_db" }
doxa_core = { path = "../doxa_core" }
doxa_auth = { path = "../doxa_auth" }
doxa_mq = { path = "../doxa_mq" }

# maybe move these types of dependencies (pretty much everything needs them) to doxa_core
actix-web = "4.0.0-beta.14"
actix-multipart = "0.4.0-beta.10"
derive_more = "0.99"
futures = "0.3.1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
rand = "0.8.4"
actix-files = "0.6.0-beta.10"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["stream"] }
