[package]
name = "doxa_vm"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio-vsock = "0.3.1"
serde = { version = "1.0.128", features = ["derive"] }
derive_more = "0.99.16"
tokio = { version = "1.10.0", features = ["fs", "io-util", "process", "rt", "macros", "net", "io-std"] }
doxa_firecracker_sdk = { path = "../doxa_firecracker_sdk" }
tempfile = "3.2.0"
bytes = "1.1.0"
futures-util = "0.3.16"
serde_yaml = "0.8.20"
tracing = "0.1.26"
tokio-stream = { version = "0.1.8", features = ["io-util"] }
sys-mount = { version = "1.3.0", default-features = false }
serde_json = "1.0.73"
clap = { version = "3.0.10", features = ["derive"] }
async-trait = "0.1.52"

# Need a more recent version than 0.11.1 to be published for attach support
# bollard = "0.11.1"

bollard = { git = "https://github.com/fussybeaver/bollard", rev = "b75ffd3e68b3a933a55edb427a5b785c68efcba7"  }

[[bin]]
name = "vm_executor"
